Update .gitignore to exclude Visual Studio files
Added rules to ignore Visual Studio files in the repository.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
+#Ignore Visual Studio Files
+.vs/
+*.v17
+*.wsuo
+*.json
+*.suo
+*.user
+*.cache
+*.db
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
